--- a/src/assets/css/project.css
+++ b/src/assets/css/project.css
@@ -1,18 +1,47 @@
+/* Mobile first - start with smallest */
 .project-img {
-  height: 410px; /* default desktop */
+  height: 250px; /* extra small phones */
   object-fit: cover;
 }
 
-/* Small screens */
-@media (max-width: 767px) {
+/* Small phones */
+@media (min-width: 368px) {
   .project-img {
-    height: 400px; /* tablets / small phones */
+    height: 300px;
   }
 }
 
-/* Extra small screens (<368px) */
-@media (max-width: 367px) {
+/* Large phones / small tablets */
+@media (min-width: 576px) {
   .project-img {
-    height: 250px; /* tiny phones */
+    height: 320px;
+  }
+}
+
+/* Tablets */
+@media (min-width: 768px) {
+  .project-img {
+    height: 330px;
+  }
+}
+
+/* Laptops */
+@media (min-width: 992px) {
+  .project-img {
+    height: 380px;
+  }
+}
+
+/* Large laptops / desktops */
+@media (min-width: 1200px) {
+  .project-img {
+    height: 270px;
+  }
+}
+
+/* Extra large desktops */
+@media (min-width: 1400px) {
+  .project-img {
+    height: 410px;
   }
 }
